# ne2

./: .gitignore  Cargo.toml  README.md
res/: settings.toml
src/: activity_bar.rs  app.rs  editor.rs  file_explorer.rs  highlight.rs  lsp.rs  main.rs  notification_center.rs  panel.rs  settings.rs  status_bar.rs  terminal.rs  tooltip.rs  utils.rs  vim.rs
src/lsp/: message.rs  mod.rs
