[package]
name = "ne2"
version = "0.1.0"
authors = ["truelossless <esteban.gressard@gmail.com>"]
edition = "2018"
licence = "MIT"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "svg"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
syntect = "4.5.0"
xi-rope = "0.3.0"
unicode-segmentation = "1.7.1"
toml ="0.5.8"
ureq = { version = "2.1.1", features = ["json"] }
app_dirs2 = "2.3.2"
once_cell = "1.7.2"
crossbeam-channel ="0.5.1"
lsp-types = "0.89.0"
portable-pty = "0.4.0"
vte = "0.10.1"

[profile.release]
panic = "abort"
lto = true